Assignment 2 page and dash app tweaks

--- a/miika/templates/base.html
+++ b/miika/templates/base.html
@@ -47,6 +47,7 @@
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visuals</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/dash-apps/bda-va-1">BDA VA 1</a>
+                                <a class="dropdown-item" href="/dash-apps/bda-va-2">BDA VA 2</a>
                             </div>
                         </li>
                     </ul>
