Colab link added tp assignment 2

--- a/miika/templates/dash_apps/bda_va_2.html
+++ b/miika/templates/dash_apps/bda_va_2.html
@@ -23,7 +23,7 @@
             <p>Use visualization to back up decisions about discount amounts for segments.</p>
             <p>Also, check purchasing patterns and wherther something can and should be done about them.</p>
             <a href="{% static 'dash_apps/bda_va_2/financial_insights_assignment_2_raw.xlsx' %}" download="financial_insights_assignment_2_raw.xlsx" class="btn btn-info my-2">Download dataset (excel)</a><br>
-            <a href="" class="btn btn-danger my-2" target="_blank">
+            <a href="https://colab.research.google.com/drive/1VLzTJ3ctsEXKi-0S60dhDzMFGK2o91Hy?usp=sharing" class="btn btn-danger my-2" target="_blank">
                 <img src="{% static 'colab_logo.png' %}" alt="Colab logo" class="img-fluid" width="30">
                 Open in Google Colab
             </a><br>
