--- a/miika/templates/base.html
+++ b/miika/templates/base.html
@@ -48,6 +48,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/dash-apps/bda-va-1">BDA VA 1</a>
                                 <a class="dropdown-item" href="/dash-apps/bda-va-2">BDA VA 2</a>
+                                <a class="dropdown-item" href="/dash-apps/bda-va-4">BDA VA 4</a>
                             </div>
                         </li>
                     </ul>
