--- a/miika/templates/base.html
+++ b/miika/templates/base.html
@@ -6,6 +6,7 @@
         {% load django_bootstrap5 %}
         {% bootstrap_css %}
         {% bootstrap_javascript%}
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}" >
         <link rel="stylesheet" href="{% static 'style.css' %}">
         <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
@@ -49,6 +50,7 @@
                                 <a class="dropdown-item" href="/dash-apps/bda-va-1">BDA VA 1</a>
                                 <a class="dropdown-item" href="/dash-apps/bda-va-2">BDA VA 2</a>
                                 <a class="dropdown-item" href="/dash-apps/bda-va-4">BDA VA 4</a>
+                                <a class="dropdown-item" href="/dash-apps/bda-va-project">BDA VA Project</a>
                             </div>
                         </li>
                     </ul>
